manifests/backend.service.clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flask-app
  name: backend-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: flask-app
